[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/menu/menu_row.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/menu.tres" type="Theme" id=2]

[node name="MenuRow" type="Control"]
anchor_right = 1.0
margin_right = -128.0
margin_bottom = 32.0
rect_min_size = Vector2( 512, 32 )
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="SelectRect" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_bottom = -8.0
rect_min_size = Vector2( 0, 28 )
mouse_filter = 1
size_flags_horizontal = 0
color = Color( 1, 0.596078, 0.054902, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UnderlineRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_right = -512.0
margin_bottom = -2.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 0.596078, 0.054902, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="."]
modulate = Color( 0.85098, 0.309804, 0.0470588, 1 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -496.0
rect_min_size = Vector2( 496, 32 )
mouse_filter = 1
size_flags_horizontal = 0
__meta__ = {
"_edit_lock_": true
}
